--- a/AMDGPUWakeHandler/Info.plist
+++ b/AMDGPUWakeHandler/Info.plist
@@ -19,10 +19,31 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>IOKitPersonalities</key>
-	<dict/>
+    <dict>
+        <key>AMDGPUWakeHandler</key>
+        <dict>
+            <key>CFBundleIdentifier</key>
+            <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+            <key>IOClass</key>
+            <string>AMDGPUWakeHandler</string>
+            <key>IOMatchCategory</key>
+            <string>AMDGPUWakeHandler</string>
+            <key>IOProviderClass</key>
+            <string>IOResources</string>
+            <key>IOResourceMatch</key>
+            <string>IOKit</string>
+        </dict>
+    </dict>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017 Hugo Pires. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
-	<dict/>
+    <dict>
+        <key>com.apple.kpi.iokit</key>
+        <string>16.7</string>
+        <key>com.apple.kpi.libkern</key>
+        <string>16.7</string>
+        <key>com.apple.kpi.mach</key>
+        <string>16.7</string>
+    </dict>
 </dict>
 </plist>
